--- a/ProjectRefreshSite/src/app/views/main/main.component.html
+++ b/ProjectRefreshSite/src/app/views/main/main.component.html
@@ -1,1 +1,14 @@
-<p>main works!</p>
+<div class="container d-flex flex-column align-items-center" id="mainContainer">
+    <div class="row">
+        <div class="col py-5">
+            <h1 class="title whiteText">
+                Video Game Trivia
+            </h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col py-5 rotation startCol">
+            <h2 id="startButt" class="whiteText" routerLink="/menu">Press Start</h2>
+        </div>
+    </div>
+</div>
